--- a/phase3_django_api/pyproject.toml
+++ b/phase3_django_api/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.5",
     "djangorestframework>=3.16.0",
+    "phonenumbers>=9.0.11",
+    "pydantic>=2.11.7",
     "pymysql>=1.1.1",
 ]
